--- a/docs/config.json
+++ b/docs/config.json
@@ -189,6 +189,7 @@
           "slug": "/access-controls/guides/",
           "entries": [
             { "title": "Role Templates", "slug": "/access-controls/guides/role-templates/" },
+            { "title": "Session Locking", "slug": "/access-controls/guides/locking/" },
             { "title": "Second Factor - U2F", "slug": "/access-controls/guides/u2f/" },
             { "title": "Per-session MFA", "slug": "/access-controls/guides/per-session-mfa/" },
             { "title": "Dual Authorization", "slug": "/access-controls/guides/dual-authz/" },
