Pass certs to the build process via a statically named file
Signed Windows builds now depend on a `.gitignore`'d
`windows-signing-cert.pfx` at the root of the source directory. This
should ease testing and help avoid accidental secret leakage.

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ terraform.tfstate
 # ansible stuff
 ssh.config
 *.retry
+
+# Code signing certificate for Windows binaries
+windows-signing-cert.pfx
