--- a/examples/workflows/config.toml
+++ b/examples/workflows/config.toml
@@ -1,11 +1,14 @@
+# plugin name used to associate data with the plugin
+plugin_name = "example"
+
 # Teleport Auth/Proxy address
-addr = "proxy.example.com:3080"
+addr = "localhost:3025"
 
 # Teleport identity file with TLS/SSH certificates.
 identity_file = "access-plugin-identity"
 
-# whitelist determines which users' requests will be approved.
-whitelist = [
+# allow_list determines which users' requests will be approved.
+allow_list = [
     "alice",
     "bob",
 ]
