--- a/.drone.yml
+++ b/.drone.yml
@@ -3623,7 +3623,7 @@ steps:
   - apk add --no-cache make
   - chown -R $UID:$GID /go
   - cd /go/src/github.com/gravitational/teleport
-  - echo "${WINDOWS_SIGNING_CERT}" | base64 -d > windows-signing-cert.pfx
+  - echo -n "$WINDOWS_SIGNING_CERT" | base64 -d > windows-signing-cert.pfx
   - make -C build.assets release-amd64
   - rm -f windows-signing-cert.pfx
   environment:
@@ -4410,6 +4410,6 @@ volumes:
       name: drone-s3-debrepo-pvc
 ---
 kind: signature
-hmac: 257e6eea44e688f9edb617686c9b5f5c6c42ace4777a89115380c4de74406c30
+hmac: 3cf2c577b8e47b30636d4c0a5f3372c25717123db4daecf147acec11268cfa73
 
 ...
