--- a/examples/chart/teleport-kube-agent/values.yaml
+++ b/examples/chart/teleport-kube-agent/values.yaml
@@ -49,6 +49,10 @@ teleportVersionOverride: ""
 # certificate.
 insecureSkipProxyTLSVerify: false
 
+# If set, will use an existing volume mounted via extraVolumes
+# as the Teleport data directory.
+existingDataVolume: ""
+
 # If true, create & use Pod Security Policy resources
 # https://kubernetes.io/docs/concepts/policy/pod-security-policy/
 podSecurityPolicy:
