--- a/examples/chart/teleport-kube-agent/templates/deployment.yaml
+++ b/examples/chart/teleport-kube-agent/templates/deployment.yaml
@@ -120,7 +120,7 @@ spec:
           name: "auth-token"
           readOnly: true
         - mountPath: /var/lib/teleport
-          name: "data"
+          name: {{ default "data" .Values.existingDataVolume }}
 {{- if .Values.extraVolumeMounts }}
   {{- toYaml .Values.extraVolumeMounts | nindent 8 }}
 {{- end }}
@@ -131,8 +131,10 @@ spec:
       - name: "auth-token"
         secret:
           secretName: {{ .Values.secretName }}
+      {{- if not .Values.existingDataVolume }}
       - name: "data"
         emptyDir: {}
+      {{- end }}
 {{- if .Values.extraVolumes }}
   {{- toYaml .Values.extraVolumes | nindent 6 }}
 {{- end }}
